# ab-test-analysis-marketing-campaign

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
ab_test/: __init__.py  bayesian.py  cleaning.py  cli.py  config.py  cuped.py  data.py  inference.py  pipeline.py  power_utils.py  report.py  scorecard.py  simulation.py  srm.py
artifacts/: decision_report.html
metrics/: latest.json
notebooks/: 02_advanced_production_upgrades.ipynb  02_advanced_production_upgrades.py  ab_test_marketing_analysis.ipynb  ab_test_marketing_analysis.py
tutorials/: 00_learning_path.md  01_why_trustworthiness_gates.md  02_tost_equivalence.md  03_itt_vs_as_treated.md  04_simulation_harness.md  05_cuped_demo.md  06_cli_metrics_html.md  README.md
