[project]
name = "ab-test-marketing"
version = "0.2.0"
description = "Inferential A/B test analysis for marketing campaign landing page creatives"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyter>=1.1.1",
    "jupytext>=1.19.4",
    "matplotlib>=3.11.0",
    "nbconvert>=7.17.1",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "scipy>=1.18.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.6",
]

[project.scripts]
ab-test = "ab_test.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ab_test"]
